add download dir
